<resources>
    <string name="app_name">Tea Manager</string>
    <string name="action_settings">Settings</string>

    <!-->Main Activity<-->
    <string name="myTeas">My teas</string>
    <string name="pickMeTea">Pick me a tea</string>
    <string name="myShops">My shops</string>

    <!-->Choose Tea Activity<-->
    <string name="title_activity_choose_tea">Choose Tea</string>
    <string name="greenTea">Green tea</string>
    <string name="blackTea">Black tea</string>
    <string name="other">Other</string>
    <string name="any">Any</string>
    <string name="title_activity_tea_list">TeaListActivity</string>

    <!-->Tea List<-->
    <string name="teaListTitle">My Teas</string>
    <string name="filters">Change filters</string>

    <!-->Tea Picked<-->
    <string name="title_activity_tea_picker">Chosen Tea</string>
    <string name="chooseAnotherTea">Choose another</string>
    <string name="thanksButton">Thanks!</string>
    <string name="title_activity_shop_list">My shops</string>

    <!-->Tea Detail<-->
    <string name="teaName">Tea name</string>
    <string name="teaType">Type:</string>
    <string name="teaInfusions">Infusions:</string>
    <string name="teaDetailAdd">Add new tea</string>
    <string name="teaDetailEdit">Edit tea</string>
    <string name="saveChanges">Save changes</string>
    <string name="submit">Add</string>

    <!-->Shop Detail<-->
    <string name="shopName">Shop name</string>
    <string name="opensAt">Opens at</string>
    <string name="closesAt">Closes at</string>
    <string name="shopDetailAdd">Add new shop</string>
    <string name="shopDetailEdit">Edit shop</string>
    <string name="myLocation">My location</string>
    <string name="clearLocation">Clear location</string>

    <!-->Tea Picked<-->
    <string name="noTeaFound">Sorry, no teas matching criteria found :-(</string>
    <string name="thatSucks">That sucks!</string>

</resources>
