<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="tea_manager.com.example.honza.tea_manager.Fragments.TeaListFragment"
    tools:showIn="@layout/activity_tea_list">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/teaList"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filtersButton"
        />

    <Button
        android:id="@+id/filtersButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filters"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="8dp"
        style="@style/myButton"
        android:padding="10dp" />

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp"
        android:id="@+id/tableLayout">

        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/teaType"
                android:textAppearance="@style/myHeading"
                app:layout_constraintTop_toTopOf="parent" />
            <TextView
                android:id="@+id/teaTypeFiltersText"
                android:layout_height="wrap_content"
                android:text="@string/any"
                android:textAppearance="@style/mySubHeading"/>
        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/teaInfusions"
                android:paddingRight="8dp"
                android:textAppearance="@style/myHeading"/>
            <TextView
                android:layout_height="wrap_content"
                android:id="@+id/teaInfusionsFiltersText"
                android:text="@string/any"
                android:textAppearance="@style/mySubHeading"/>
        </TableRow>

    </TableLayout>
</android.support.constraint.ConstraintLayout>
